--- a/my-fitnes-planner-app/src/app/modules/training/components/training-list/training-list.component.html
+++ b/my-fitnes-planner-app/src/app/modules/training/components/training-list/training-list.component.html
@@ -1,69 +1,25 @@
-<!-- <mat-form-field appearance="standard">
-  <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input />
-</mat-form-field>
-<table mat-table [dataSource]="dataSource">
-  <!-- Position Column
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>No.</th>
-    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-  </ng-container>
-
-  <!-- Name Column
-  <ng-container matColumnDef="trainingDate">
-    <th mat-header-cell *matHeaderCellDef>Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.trainingDate }}</td>
-  </ng-container>
-  <!-- Symbol Column
-  <ng-container matColumnDef="typeOfTraining">
-    <th mat-header-cell *matHeaderCellDef>type</th>
-    <td mat-cell *matCellDef="let element">{{ element.typeOfTraining }}</td>
-  </ng-container>
-  <!-- Symbol Column
-  <ng-container matColumnDef="exerciseName">
-    <th mat-header-cell *matHeaderCellDef>Exercise</th>
-    <td mat-cell *matCellDef="let element">{{ element.exerciseName }}</td>
-  </ng-container>
-  <!-- Weight Column
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef>Weight</th>
-    <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
-  </ng-container>
-  <!-- Weight Column
-  <ng-container matColumnDef="update">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element">
-      <button
-        mat-button
-        class="my-button primary"
-        (click)="editTraining(element)"
-      >
-        Update
-      </button>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
-<mat-paginator
-  [pageSizeOptions]="[5, 10, 20]"
-  showFirstLastButtons
-  aria-label="Select page of periodic elements"
->
-</mat-paginator>
-
-training value : {{ training | json }} -->
-
-<button mat-button class="my-button primary" (click)="getTrainings()">
-  get items
-</button>
 <!-- <button mat-button class="my-button primary" (click)="getTraining()">
   Update
 </button> -->
------------------------------------------------------------------------------------------------------------------------------------------------------
 <div class="table-responsive">
-  <table class="table" data-search="true">
+  <!-- Filter field -->
+  <div class="mb-3 row">
+    <label
+      for="table-complete-search"
+      class="col-xs-3 col-sm-auto col-form-label"
+      >Full text search:</label
+    >
+    <div class="col-xs-3 col-sm-auto">
+      <input
+        id="table-complete-search"
+        type="text"
+        class="form-control"
+        name="searchTerm"
+        [(ngModel)]="dts.searchTerm"
+      />
+    </div>
+  </div>
+  <table class="table table-striped" data-search="true">
     <thead>
       <tr>
         <th data-field="state" data-checkbox="true">#</th>
@@ -73,7 +29,7 @@ training value : {{ training | json }} -->
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let training of trainingsDataSource">
+      <tr *ngFor="let training of trainings$ | async">
         <!-- trackBy: trackTraining -->
         <td>{{ training.id }}</td>
         <td>{{ training.trainingDate }}</td>
@@ -90,14 +46,14 @@ training value : {{ training | json }} -->
                 </thead>
                 <tbody>
                   <tr *ngFor="let exercise of training.exercises">
-                    <td>{{ exercise.name }}</td>
+                    <td>{{ exercise.exerciseName }}</td>
                     <td>
                       <table class="table mb-0">
                         <thead>
                           <tr>
                             <th>Serija#</th>
                             <th>Broj ponavljanja</th>
-                            <th>Kilaza</th>
+                            <th>Kilaza [kg]</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -105,7 +61,7 @@ training value : {{ training | json }} -->
                             *ngFor="let serie of exercise.series; let i = index"
                           >
                             <td>{{ i + 1 }}</td>
-                            <td>{{ serie.repetitionNumber }}</td>
+                            <td>{{ serie.repsNum }}</td>
                             <td>{{ serie.weight }}</td>
                           </tr>
                         </tbody>
@@ -119,5 +75,44 @@ training value : {{ training | json }} -->
         </td>
       </tr>
     </tbody>
+    <!-- Navigation bar -->
+    <!-- <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+          </a>
+        </li>
+      </ul>
+    </nav> -->
   </table>
+  <div class="d-flex justify-content-between p-2">
+    <ngb-pagination
+      [collectionSize]="(total$ | async)!"
+      [(page)]="dts.page"
+      [pageSize]="dts.pageSize"
+    >
+    </ngb-pagination>
+
+    <select
+      class="form-select"
+      style="width: auto"
+      name="pageSize"
+      [(ngModel)]="dts.pageSize"
+    >
+      <option [ngValue]="2">2 items per page</option>
+      <option [ngValue]="4">4 items per page</option>
+      <option [ngValue]="6">6 items per page</option>
+    </select>
+  </div>
 </div>
